--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "require": {
         "php": ">=7.1",
-        "contao/core-bundle": "~4.4"
+        "contao/core-bundle": "^5.3",
     },
     "require-dev": {
         "contao/manager-plugin": "^2.0"
